--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,5 @@
             "email": "curder@foxmail.com"
         }
     ],
-    "minimum-stability": "dev"
+    "minimum-stability": "dev-master"
 }
